Refactor subtitle fetching in DualSubtitleManager